# COMRaDE

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: architecture.md
example/: CMakeLists.txt  main.cpp
include/: DLL_API.h  MathAdditions.h
include/COMRaDE/EntitySystem/: Dummy.h  Entity.h  EntitySystem.h  Folder.h  Geometry.h  MultiBody.h  Object.h  Transform.h
include/COMRaDE/RobotMath/: MathAdditions.h  RobotAdditions.h  RobotArmLib.h  RobotJoint.h  RobotLink.h
include/COMRaDE/Scene/: Scene.h  SceneLoader.h  SceneSerializer.h
src/EntitySystem/: Entity.cpp  Folder.cpp  MultiBody.cpp  Object.cpp  Transform.cpp
src/RobotMath/: MathAdditions.cpp  RobotAdditions.cpp  RobotArmLib.cpp  RobotJoint.cpp  RobotLink.cpp
src/Scene/: Scene.cpp  SceneLoader.cpp  SceneSerializer.cpp
